// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если доступна оплата кошельком правильно инициирует платеж при клике на кнопку 1`] = `
Array [
  "user:19201127-27875385be7552cd526397b6244b3096-1553098268264",
  Object {
    "id": "wallet",
    "name": "Кошелёк",
  },
  Object {
    "accountRefillAmount": undefined,
    "returnUrl": "link/billing_return_page/?",
    "salesmanDomain": "autoru",
  },
]
`;

exports[`если есть привязанная карта правильно инициирует платеж при клике на кнопку 1`] = `
Array [
  "user:19201127-27875385be7552cd526397b6244b3096-1553098268264",
  Object {
    "brand": "MASTERCARD",
    "id": "bank_card",
    "mask": "555555|4444",
    "preferred": false,
    "ps_id": "YANDEXKASSA_V3",
    "verification_required": undefined,
  },
  Object {
    "accountRefillAmount": undefined,
    "returnUrl": "link/billing_return_page/?",
    "salesmanDomain": "autoru",
  },
]
`;

exports[`если при инициализации бэк вернул ошибку залогирует её 1`] = `
Object {
  "errorCode": "BAD_REQUEST",
  "event": "VAS_ERROR",
  "originalPrice": undefined,
  "price": undefined,
  "serviceId": "package_turbo",
}
`;

exports[`пакеты "отчёт по вину" нарисует плашку если у пользователя нет подписок и оплачивается сервис "отчёт по вину" и передаст в нее инфо о пакетах 1`] = `
<BillingVinReportSelector
  bundles={
    Array [
      Object {
        "counter": "1",
        "days": 365,
        "duration": "31536000s",
        "price": Object {
          "base_price": "9700",
          "effective_price": "9700",
        },
        "product": "offers-history-reports",
        "ticketId": "user:34234570-b5564e505ec75525edcc1483cc4d06ee-1573487633608",
      },
      Object {
        "counter": "5",
        "days": 365,
        "duration": "31536000s",
        "price": Object {
          "base_price": "38800",
          "effective_price": "38800",
        },
        "product": "offers-history-reports",
      },
      Object {
        "counter": "10",
        "days": 365,
        "duration": "31536000s",
        "price": Object {
          "base_price": "77700",
          "effective_price": "77700",
        },
        "product": "offers-history-reports",
      },
    ]
  }
  className="Billing__bundleSelector"
  disabled={false}
  onTabChange={[Function]}
  selectedBundle="1"
/>
`;

exports[`пакеты "отчёт по вину" при клике на таб если транзакция не была инициализирована отправит запрос на инициализацию 1`] = `
Array [
  Object {
    "from": "new-lk-tab",
    "offerId": "1234567-abcdef",
    "product": "%5B%7B%22name%22%3A%22offers-history-reports%22%2C%22count%22%3A1%7D%5D",
    "purchaseCount": "5",
    "returnUrl": "\\"link/billing_return_page/?\\"",
  },
]
`;

exports[`пакеты "отчёт по вину" при клике на таб отправит метрику клика если это не пакет 1`] = `
Array [
  Object {
    "errorCode": undefined,
    "event": "VAS_CLICK",
    "originalPrice": 97,
    "price": 97,
    "serviceId": "offers-history-reports-1",
  },
]
`;

exports[`пакеты "отчёт по вину" при клике на таб отправит метрику клика если это пакет 1`] = `
Array [
  Object {
    "errorCode": undefined,
    "event": "VAS_CLICK",
    "originalPrice": 388,
    "price": 388,
    "serviceId": "offers-history-reports-5",
  },
]
`;

exports[`после успешной оплаты если есть автоподнятие покажет экран с автоподнятием 1`] = `
<BillingPaymentStatus
  autoProlongableService={
    Object {
      "base_price": 99,
      "days": 1,
      "name": "Поднятие в поиске",
      "service": "all_sale_fresh",
    }
  }
  autoProlongationChecked={false}
  error={Object {}}
  hasSupportLinkOnFailScreen={true}
  onAutoBoostButtonClick={[Function]}
  onAutoProlongationButtonClick={[Function]}
  status="PAID"
/>
`;

exports[`после успешной оплаты если есть автоподнятие уведомит родительское окно об успешном подключении автоподнятия 1`] = `
Array [
  Object {
    "payload": Object {
      "status": "SUCCESS",
      "time": "10:00",
    },
    "source": "billing_frame",
    "type": "auto_boost_change",
  },
  "https://auto.ru",
]
`;

exports[`после успешной оплаты если есть автопродляемый сервис покажет экран с автопродлением 1`] = `
<BillingPaymentStatus
  autoProlongableService={
    Object {
      "base_price": 997,
      "days": 3,
      "name": "Турбо-продажа",
      "prolongation_allowed": true,
      "prolongation_forced": false,
      "service": "package_turbo",
    }
  }
  autoProlongationChecked={false}
  error={Object {}}
  hasSupportLinkOnFailScreen={true}
  onAutoBoostButtonClick={[Function]}
  onAutoProlongationButtonClick={[Function]}
  status="PAID"
/>
`;

exports[`после успешной оплаты если есть автопродляемый сервис уведомит родительское окно об успешном подключении автопродления 1`] = `
Array [
  Object {
    "payload": Object {
      "status": "SUCCESS",
    },
    "source": "billing_frame",
    "type": "auto_prolongation_change",
  },
  "https://auto.ru",
]
`;

exports[`после успешной оплаты если не удалось подключить автопродление после оплаты уведомит родительское окно об этом 1`] = `
Array [
  Object {
    "payload": Object {
      "status": "ERROR",
    },
    "source": "billing_frame",
    "type": "auto_prolongation_change",
  },
  "https://auto.ru",
]
`;

exports[`после успешной оплаты правильно залогирует событие успеха 1`] = `
Object {
  "errorCode": undefined,
  "event": "VAS_PURCHASE",
  "originalPrice": 999,
  "price": 999,
  "serviceId": "package_turbo",
}
`;

exports[`правильно инициализирует вас логгер 1`] = `
Object {
  "category": "trucks",
  "from": "new-lk-tab",
  "isImmediate": true,
  "isMobile": false,
  "offerId": "1234567-abcdef",
}
`;

exports[`правильно инициирует платеж при пополнение баланса кошелька 1`] = `
Array [
  "user:19201127-27875385be7552cd526397b6244b3096-1553098268264",
  Object {
    "brand": "MASTERCARD",
    "id": "bank_card",
    "mask": "555555|4444",
    "preferred": false,
    "ps_id": "YANDEXKASSA_V3",
    "verification_required": undefined,
  },
  Object {
    "accountRefillAmount": 99900,
    "returnUrl": "link/billing_return_page/?",
    "salesmanDomain": "autoru",
  },
]
`;

exports[`правильно инициирует платеж при привязке карты 1`] = `
Array [
  "user:19201127-27875385be7552cd526397b6244b3096-1553098268264",
  Object {
    "id": "bank_card",
    "name": "Банковская карта",
    "paymentToken": "very-secret-string",
    "ps_id": "YANDEXKASSA_V3",
    "save": true,
  },
  Object {
    "accountRefillAmount": 100,
    "returnUrl": "link/billing_return_page/?",
    "salesmanDomain": "autoru",
  },
]
`;

exports[`правильно рисует компонент BillingDumb 1`] = `
<div
  className="Billing"
>
  <BillingHeader
    baseCost={999}
    cost={999}
    shouldShowCostInfo={true}
    title="Турбо-продажа"
  />
  <BillingPaymentMethods
    canChangeMethod={true}
    error={Object {}}
    onMethodChange={[Function]}
    paymentMethods={
      Array [
        Object {
          "id": "bank_card",
          "name": "Банковская карта",
          "ps_id": "YANDEXKASSA_V3",
        },
        Object {
          "id": "sberbank",
          "name": "Сбербанк Онлайн",
          "ps_id": "YANDEXKASSA_V3",
        },
        Object {
          "id": "yandex_money",
          "name": "ЮMoney",
          "ps_id": "YANDEXKASSA_V3",
        },
        Object {
          "id": "qiwi",
          "name": "QIWI Кошелек",
          "ps_id": "YANDEXKASSA_V3",
        },
        Object {
          "id": "webmoney",
          "name": "Webmoney",
          "ps_id": "YANDEXKASSA_V3",
        },
      ]
    }
    selectedMethodId="bank_card"
    tiedCards={Array []}
  />
  <div
    className="Billing__frameContainer"
  >
    <iframe
      className="Billing__cardFrame"
      src="link/billing_card/?amount=999"
    />
  </div>
  <BillingFooter
    checkboxChecked={true}
    checkboxDisabled={false}
    checkboxVisible={true}
    licenseUrl="https://yandex.ru/legal/autoru_licenseagreement"
    onRememberCardToggle={[Function]}
  />
</div>
`;

exports[`при инициализации платежа передаст корректный урл для возврата если оплата картой и есть автопродляемый сервис то урл будет содержать параметры для окна оплаты 1`] = `"link/billing_return_page/?"`;

exports[`при инициализации платежа передаст корректный урл для возврата если оплата картой и нет автопродляемого сервиса то урл будет содержать только параметр для уведомления 1`] = `"link/billing_return_page/?"`;

exports[`при инициализации платежа передаст корректный урл для возврата если оплата картой и оплачивается вин-истоиря то урл будет содержать параметр для уведомления и подскролла 1`] = `"link/billing_return_page/?"`;

exports[`при инициализации платежа при оплате картой с цвц-подтверждением правильно сформирует урл возврата 1`] = `"link/billing_return_page/?"`;

exports[`при неудачной оплате если пользователь закрыл окно внешнего платежа залогирует событие отмены и покажет первоначальный экран 1`] = `
Object {
  "errorCode": undefined,
  "event": "VAS_CANCEL",
  "originalPrice": 97,
  "price": 97,
  "serviceId": "offers-history-reports-1",
}
`;

exports[`при неудачной оплате если произошла ошибка платежа залогирует событие ошибки 1`] = `
Object {
  "errorCode": "FRAUD_SUSPECTED",
  "event": "VAS_ERROR",
  "originalPrice": 97,
  "price": 97,
  "serviceId": "offers-history-reports-1",
}
`;

exports[`при неудачной оплате покажет окно ошибки 1`] = `
<BillingPaymentStatus
  autoProlongableService={
    Object {
      "base_price": 999,
      "days": 3,
      "effective_price": 999,
      "name": "Турбо-продажа",
      "prolongation_allowed": true,
      "prolongation_forced": false,
      "service": "package_turbo",
    }
  }
  autoProlongationChecked={false}
  error={
    Object {
      "type": "payment_fail",
    }
  }
  hasSupportLinkOnFailScreen={true}
  onAutoBoostButtonClick={[Function]}
  onAutoProlongationButtonClick={[Function]}
  status="FAILED"
/>
`;

exports[`при оплате новой картой если произошла ошибка в работе библиотеки checkout.js залогирует ошибку 1`] = `
Object {
  "errorCode": "ya_checkout_fail",
  "event": "VAS_ERROR",
  "originalPrice": 999,
  "price": 999,
  "serviceId": "package_turbo",
}
`;

exports[`при оплате новой картой покажет фрейм "оплата новой картой" 1`] = `
<iframe
  className="Billing__cardFrame"
  src="link/billing_card/?amount=999"
/>
`;

exports[`при оплате новой картой правильно инициирует платеж при получении сообщения от фрейма 1`] = `
Array [
  "user:19201127-27875385be7552cd526397b6244b3096-1553098268264",
  Object {
    "id": "bank_card",
    "name": "Банковская карта",
    "paymentToken": "very-secret-string",
    "ps_id": "YANDEXKASSA_V3",
    "save": true,
  },
  Object {
    "accountRefillAmount": undefined,
    "returnUrl": "link/billing_return_page/?",
    "salesmanDomain": "autoru",
  },
]
`;

exports[`при оплате новой картой правильно инициирует платеж при получении сообщения от фрейма если пользователь не хочет запоминать карту 1`] = `
Array [
  "user:19201127-27875385be7552cd526397b6244b3096-1553098268264",
  Object {
    "id": "bank_card",
    "name": "Банковская карта",
    "paymentToken": "very-secret-string",
    "ps_id": "YANDEXKASSA_V3",
    "save": false,
  },
  Object {
    "accountRefillAmount": undefined,
    "returnUrl": "link/billing_return_page/?",
    "salesmanDomain": "autoru",
  },
]
`;

exports[`при оплате сбербанком правильно инициирует платеж при клике на кнопку 1`] = `
Array [
  "user:19201127-27875385be7552cd526397b6244b3096-1553098268264",
  Object {
    "id": "sberbank",
    "name": "Сбербанк Онлайн",
    "phone": "79771234567",
    "ps_id": "YANDEXKASSA_V3",
  },
  Object {
    "accountRefillAmount": undefined,
    "returnUrl": "link/billing_return_page/?",
    "salesmanDomain": "autoru",
  },
]
`;

exports[`при оплате сторонним способом при выборе метода сразу инициирует платеж 1`] = `
Array [
  "user:19201127-27875385be7552cd526397b6244b3096-1553098268264",
  Object {
    "id": "yandex_money",
    "name": "ЮMoney",
    "ps_id": "YANDEXKASSA_V3",
  },
  Object {
    "accountRefillAmount": undefined,
    "returnUrl": "link/billing_return_page/?",
    "salesmanDomain": "autoru",
  },
]
`;

exports[`при попытке закрыть окно оплаты если платеж завершен с ошибкой залогирует события отмены оплаты 1`] = `
Object {
  "errorCode": undefined,
  "event": "VAS_CANCEL",
  "originalPrice": 999,
  "price": 999,
  "serviceId": "package_turbo",
}
`;

exports[`при попытке закрыть окно оплаты если платеж завершен с ошибкой сразу отправит сообщение родителю на закрытие модала 1`] = `
Array [
  Object {
    "source": "billing_frame",
    "type": "close_request",
  },
  "https://auto.ru",
]
`;

exports[`при попытке закрыть окно оплаты если платеж завершен успешно сразу отправит сообщение родителю на закрытие модала 1`] = `
Array [
  Object {
    "source": "billing_frame",
    "type": "close_request",
  },
  "https://auto.ru",
]
`;

exports[`при попытке закрыть окно оплаты если платеж не завершен при клике на кнопку "да" залогирует событие отказа оплаты 1`] = `
Object {
  "errorCode": undefined,
  "event": "VAS_CANCEL",
  "originalPrice": 999,
  "price": 999,
  "serviceId": "package_turbo",
}
`;
